[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-spirals"
version = "1.0.0"
description = "Open-source workflow automation engine for AI-driven integration orchestration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Helix Team", email = "team@helix.dev"},
]
keywords = [
    "workflow",
    "automation",
    "integration",
    "orchestration",
    "zapier",
    "alternative",
    "ai",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Internet",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]
integrations = [
    "slack-sdk>=3.23.0",
    "discord.py>=2.3.0",
    "stripe>=7.4.0",
    "boto3>=1.34.0",
    "google-cloud-storage>=2.14.0",
    "twilio>=8.10.0",
    "mailchimp-marketing>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Deathcharge/helix-spirals"
Documentation = "https://helix-spirals.dev"
Repository = "https://github.com/Deathcharge/helix-spirals.git"
Issues = "https://github.com/Deathcharge/helix-spirals/issues"

[project.scripts]
helix-spirals = "helix_spirals.main:main"

[tool.setuptools]
packages = ["helix_spirals"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src/helix_spirals --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
